[package]
name = "m2c"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
comma = "1.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tree-sitter = "0.25.3"
tree-sitter-make = "1.1.1"
which = "7.0.3"

[build-dependencies]
cc = "*"
